# walletka-server

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: publish-cashu.yml  publish-docker.yml  publish-lightning_node.yml  publish-lsp.yml
cashu-api/: Cargo.toml  Dockerfile  build.rs
cashu-api/src/: config.rs  main.rs
cashu-api/src/api/: cashu_api.rs  cashu_grpc_api.rs  grpc_api.rs  mod.rs  models.rs
cashu-api/src/cashu/: error.rs  mod.rs  utils.rs
cashu-api/src/repositories/: cashu_repository.rs  mod.rs
cashu-api/src/services/: mod.rs  payment_received_service.rs
cashu-api/src/types/: mod.rs
crates/cashu_internal_client/: Cargo.toml  build.rs
crates/cashu_internal_client/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: config.rs  lib.rs
crates/events/: Cargo.toml
crates/events/src/: config.rs  lib.rs  lightning_node_events.rs  messages.rs  rabbitmq.rs
crates/lightning_node_client/: Cargo.toml  build.rs
crates/lightning_node_client/src/: lib.rs
lightning-node/: Cargo.toml  Dockerfile  build.rs
lightning-node/src/: config.rs  main.rs
lightning-node/src/processor/: mod.rs
lightning-node/src/server/: mod.rs
lsp-api/: Cargo.toml  Dockerfile
lsp-api/src/: config.rs  main.rs
lsp-api/src/api/: lsp_customer_api.rs  mod.rs  models.rs  nostr_api.rs
lsp-api/src/client/: mod.rs  nostr_client.rs
lsp-api/src/entity/: mod.rs
lsp-api/src/repository/: lsp_customer_repository.rs  lsp_invoice_repository.rs  mod.rs
lsp-api/src/services/: lsp_customer_service.rs  mod.rs  payment_received_service.rs
lsp-api/src/utils/: mod.rs
protos/: cashu.proto  node.proto
swap-api/: Cargo.toml
swap-api/src/: config.rs  main.rs
