[package]
name = "cashu-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
envy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
bitcoin = "0.31.0" # todo: -> workspace?
lightning_node_client = { path = "../crates/lightning_node_client" }
events = { path = "../crates/events" }
database = { path = "../crates/database" }
cashu-sdk = { git = "https://github.com/Walletka/cashu-crab", branch = "cashu-sdk-kotlin-android", default-features = false, features = ["mint", "wallet"] }

[build-dependencies]
lightning_node_client = { path = "../crates/lightning_node_client" }
