[package]
name = "lightning-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
amqprs = { workspace = true }
tonic-web = { workspace = true }
envy = { workspace = true }
dotenv = { workspace = true }
tokio-stream = { workspace = true }

events = { path = "../crates/events" }

ldk-node = { git = "https://github.com/Walletka/ldk-node" }
# ldk-node = "0.2.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
os-rng = "0.0.0"

[build-dependencies]
tonic-build = { workspace = true }
