[package]
name = "lsp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
envy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
bitcoin = { workspace = true }
chrono = { workspace = true }
lightning-invoice = { workspace = true }
rand = { workspace = true }
lightning_node_client = { path = "../crates/lightning_node_client" }
cashu_internal_client = { path = "../crates/cashu_internal_client" }
events = { path = "../crates/events" }
database = { path = "../crates/database" }
nostr-sdk = "0.27.0"

[build-dependencies]
lightning_node_client = { path = "../crates/lightning_node_client" }
cashu_internal_client = { path = "../crates/cashu_internal_client" }
