[package]
name = "swap-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
envy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
events = { path = "../crates/events" }
database = { path = "../crates/database" }
lightning_node_client = { path = "../crates/lightning_node_client" }


[build-dependencies]
lightning_node_client = { path = "../crates/lightning_node_client" }