[package]
name = "cashu_internal_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
tonic = "0.10.2"
tokio = { workspace = true }
anyhow = { workspace = true }
tower = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
